[gd_scene load_steps=4 format=2]

[ext_resource path="res://Raea Adams/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Raea Adams/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 35.1354, 37.8474 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]

input_pickable = false
collision_layer = 1
collision_mask = 6
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="HitboxArea" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Collider" type="CollisionShape2D" parent="HitboxArea" index="0"]

shape = SubResource( 1 )

[node name="BodyCollider" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[node name="SanityTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="SanityUI" type="CanvasLayer" parent="." index="4"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="SanityBar" type="ProgressBar" parent="SanityUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_top = 18.0
margin_right = 183.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Percent" ]

[node name="CharCam" type="Camera2D" parent="." index="5"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="area_entered" from="HitboxArea" to="." method="_on_Area2D_area_entered"]

[connection signal="area_exited" from="HitboxArea" to="." method="_on_Area2D_area_exited"]

[connection signal="timeout" from="SanityTimer" to="." method="_on_SanityTimer_timeout"]


